--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <body>
     <p>Hello, whole world!</p>
 
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
