--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <p>Hello, whole world!</p>
 
+    <!--<script src="script.js"></script>-->
     <script src="script (1).js"></script>
   </body>
 </html>
